Working version of curator portal meant to be used as downloads center
