# verification/curator-service/api/openapi/openapi.yaml
@@ -633,6 +633,25 @@ paths:
                     $ref: '#/components/responses/200FullDataSetDownload'
                 '500':
                     $ref: '#/components/responses/500'
+    /cases/getDataDownloadLink:
+        post:
+            summary: >
+                Generates signed URL to download full data set from AWS S3
+            tags: [ Case ]
+            operationId: generateSignedUrl
+            requestBody:
+                content:
+                   application/json:
+                      schema:
+                        properties:
+                          filename:
+                            description: Name of the file to download
+                            type: string
+            responses:
+              '200':
+                $ref: '#/components/responses/200FullDataSetDownload'
+              '500':
+                $ref: '#/components/responses/500'
     /cases/countryData:
       get:
         summary: Data for cases by country table
@@ -1221,6 +1240,24 @@ paths:
                     $ref: '#/components/responses/403'
                 '500':
                     $ref: '#/components/responses/500'
+    /users/agreeToDataAcknowledgement:
+        post:
+          tags: [ User ]
+          summary: Agrees to data acknowledgement
+          operationId: agreeToDataAcknowledgement
+          responses:
+              '200':
+                  $ref: '#/components/responses/200User'
+              '400':
+                  $ref: '#/components/responses/400'
+              '403':
+                  $ref: '#/components/responses/403'
+              '404':
+                  $ref: '#/components/responses/404'
+              '422':
+                  $ref: '#/components/responses/422'
+              '500':
+                  $ref: '#/components/responses/500'
     /excludedCaseIds:
         get:
             summary: Lists IDs of excluded cases for a specified source
